glx/testdata/valid/person-minimal.glx
persons:
  person-12345678:
    concluded_identity:
      primary_name: "Test Person"
