glx/testdata/invalid/missing-required-fields/persons/person-123.glx
persons:
  person-123:
    properties:
      name:
        value: "John"


